--- a/labs/lab_4/labsheet4.ipynb
+++ b/labs/lab_4/labsheet4.ipynb
@@ -270,16 +270,7 @@
    "source": [
     "### Question\n",
     "\n",
-    "Observe the results obtained on `data2` and `data3`. What can we tell by looking at the figures you plotted above?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### CORRECT ANSWER\n",
-    "\n",
-    "When the likelihood is further from the suggested prior, we are less confident about our measurements, and thus we observe a larger distance between the two distributions' mean."
+    "Observe the results obtained on `data2.dat`."
    ]
   },
   {
@@ -342,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
